# Venora

./: .gitignore  .gitmodules  .pylintrc  LICENSE  README.md  docker-compose.yml  run_client_unit_tests.sh  setup-ssl-keys.sh
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  development.yml  pylint.yml
client/: Dockerfile  install_client_pkg.sh  requirements.txt  run_client_unit_tests.sh  setup.py
client/backend/: app.py
client/client/: client.py  cmd.py  config.py  file_utils.py
client/client/config/: logs.py  settings.py
client/client/logic/: actions.py  netparse.py
client/client/networking/: actions.py  comms.py  packer.py  schema.py
client/frontend/: .eslintrc.json  package-lock.json  package.json
client/frontend/public/: index.html  manifest.json
client/frontend/src/: App.css  App.css.goodbak  App.js  index.js
client/frontend/src/assets/images/: sign-in-bg.jfif
client/frontend/src/components/: Register.js  Typewriter.js
client/frontend/src/pages/SignIn/: index.js
client/frontend/src/pages/SignIn/components/: ConnectionError.css  ConnectionError.js  SignInForm.css  SignInForm.js
client/tests/functional/: test_actions.py  test_connection.py
client/tests/unit/: test_file_utils.py
client/tests/unit/networking/: test_comms.py  test_packer.py
db/: Dockerfile
db-accessor-api/: .flaskenv  Dockerfile  auth.py  requirements.txt  start_srv_after_db.sh  util.py  web-service.py
db-accessor-api/SSL/: setup-ssl-key.sh
db-accessor-api/db/: accessor.py  setup.py
db-admin-api/: Dockerfile  requirements.txt  util.py  web-service.py
db/ddl/: 1_account.sql  2_categories.sql  3_account_strike_auth.sql  3_permissions.sql  4_account_strike_auth.sql  4_strike_categories.sql  5_strike_packs.sql  6_wperm.sql
server/: CMakeLists.txt  Dockerfile  build.sh  generate-certs.sh  log.c  log.h  server.c  start_srv_after_db.sh
server/database/: CMakeLists.txt  accessor.c  accessor.h  db_structs.h  token.c  token.h  web-utils.c  web-utils.h
server/logic/: CMakeLists.txt  account.h  actions.c  actions.h  json-parser.c  json-parser.h  logic.c  logic.h  session_data.h  state.h
server/networking/: CMakeLists.txt  certificates.c  certificates.h  comms.h  networking.c  networking.h  schema.h  utils.c  utils.h  web-utils.c  web-utils.h
